# precept-framework

./: .gitignore  CITATION.cff  LICENSE  PRECEPT_PAPER.md  README.md  package-lock.json  pyproject.toml  pytest.ini
examples/: precept_autogen_mcp_full.py
examples/config/: __init__.py  display.py  experiment.py
scripts/: README_EXPERIMENTS.md  comprehensive_fix.py  convert_algorithms.py  convert_to_latex.py  fix_alg_math.py  fix_algorithm_escaping.py  fix_formatting_v2.py  fix_gets.py  fix_gets2.py  fix_latex_issues.py  generate_exp6_figures.py  generate_exp6_main_figure.py  generate_exp7_main_figure.py  render_mermaid_diagrams.py  rerender_mermaid.py  revert_to_algo_lstlisting.py  run_exp1_main_comparison.py  run_exp2_static_knowledge_ablation.py  run_exp3_training_size_ablation.py  run_exp4_continuous_learning.py  run_exp5_model_ablation.py  run_exp6_compositional_generalization.py  run_exp7_rule_drift.py  run_exp8_compass_ablation.py  run_exp9_compass_stress.py  run_submission_repro.py  run_submission_repro.sh  test_hybrid_parsing.py  test_precept_workflow.py
scripts/create_results/: README.md  generate_consolidated_results.py  generate_exp1_main_comparison_results.py  generate_exp2_static_knowledge_results.py  generate_exp3_training_size_results.py  generate_exp4_continuous_learning_results.py  generate_exp5_model_ablation_results.py
scripts/utils/: pct_bounds.py
src/models/: __init__.py  anthropic_api.py  embedding_models.py  gemini_api.py  groq_api.py  openai_api.py  together_ai_api_models.py
src/precept/: README_PRECEPT.md  __init__.py  agent_functions.py  autogen_integration.py  autogen_precept_agent.py  baseline_agents.py  baseline_functions.py  baselines.py  black_swan_gen.py  code_executor.py  compass_controller.py  compass_integration.py  compass_mcp_client.py  complexity_analyzer.py  conflict_resolution.py  constraints.py  context_engineering.py  csp_constraint_manager.py  dynamic_coding_config.py  execution_feedback_processor.py  execution_tracer.py  gepa.py  ingestion.py  llm_clients.py  mcp_remem_integration.py  memory_consolidation.py  memory_store.py  multiturn_docker_agent.py  pareto_memory.py  precept_agent.py  precept_mcp_client.py  precept_mcp_server.py  precept_orchestrator.py  remem_pipeline.py  rule_parser.py  scoring.py  simulation.py  single_turn_docker_agent.py  strategy_registry.py  structured_outputs.py
src/precept/config/: __init__.py  agent.py  baseline.py  booking.py  coding.py  constraints.py  devops.py  dynamic_static_knowledge.py  factual_extraction.py  finance.py  integration.py  llm.py  logging.py  logistics.py  multi_condition.py  paths.py  prompts.py  unified.py
src/precept/document_processors/: __init__.py  base.py  chunkers.py  factory.py  langchain_adapter.py  registry.py
src/precept/domain_strategies/: __init__.py  base.py  booking.py  coding.py  devops.py  finance.py  integration.py  logistics.py
src/precept/scenario_generators/: __init__.py  booking.py  coding.py  devops.py  finance.py  integration.py  logistics.py
submission_repro_data/: FIGURE_SHA256.txt  REPRODUCIBILITY_MANIFEST.md
submission_repro_data/environment/: ENVIRONMENT_LOCK.md  environment_lock.json  requirements.lock.txt
submission_repro_data/paper_experiment_sources/: README.md
submission_repro_data/publication_results/: EXP5_RULE_PERSISTENCE_VERIFICATION_REPORT.md
submission_repro_data/publication_results/exp1_main_comparison_20260208_115951/: aggregated_results.json  booking_seed1337_results.json  booking_seed2024_results.json  booking_seed42_results.json  coding_seed123_results.json  coding_seed3141_results.json  coding_seed42_results.json  coding_seed456_results.json  coding_seed789_results.json  coding_seed8888_results.json  coding_seed999_results.json  devops_seed1337_results.json  devops_seed2024_results.json  devops_seed42_results.json  devops_seed456_results.json  devops_seed7777_results.json  devops_seed789_results.json  devops_seed8888_results.json  (+33 more)
submission_repro_data/static_knowledge/: booking_kb.json  coding_kb.json  devops_kb.json  finance_kb.json  integration_kb.json  logistics_kb.json
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_data.py
tests/integration/: __init__.py  test_baseline_agents.py  test_deterministic_keys.py  test_learning_integration.py  test_mcp_mock_integration.py  test_precept_agent.py  test_workflow_integration.py
tests/unit/: __init__.py  test_agent_functions.py  test_baseline_functions.py  test_black_swan_gen.py  test_compass_integration.py  test_conflict_resolution.py  test_constraints.py  test_csp_constraint_manager.py  test_gepa_detailed.py  test_ingestion_detailed.py  test_memory_store_detailed.py  test_precept_modules.py  test_rule_parser_detailed.py  test_scenario_generators.py  test_structured_outputs.py
(+637 files in other folders)
